create side bar and bottom bar

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Spotify</title>
         <link rel="stylesheet" href="./assets/css/style.css">
         <link rel="stylesheet"
-            href="/assets/fonts/icons/themify-icons/themify-icons.css">
+            href="./assets/fonts/icons/themify-icons/themify-icons.css">
         <link rel="stylesheet"
             href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <script
@@ -29,8 +29,7 @@
             href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     </head>
     <body>
-        <div id="web-grid" class = "row">
-            <div id="navigation-bar" class="col-2">
+            <div id="navigation-bar">
                 <div class="main-nav-row row">
                     <ul class="main-nav">
                         <li class="nav-item"><i class="nav-icon bi-house-fill"></i>
@@ -57,17 +56,30 @@
                 </div>
                 <div class="sub-nav-row row">
                     <ul class="play-lists">
-                        <li class="nav-item"><a href="" class="nav-link">Fresh & Chill</a></li>
+                        <li class="nav-item"><a href="" class="nav-link">Fresh &
+                                Chill</a></li>
                         <li class="nav-item"><a href="" class="nav-link">English</a></li>
                     </ul>
                 </div>
             </div>
-            <div id="content-section" class="col-9">
-                
+            <div id="content-section">
+
             </div>
         </div>
-        <div id="play-bar">
-            <i class="bi-play-circle play-btn"></i>
+        <div id="play-bar" class="row">
+            <div class="now-playing col-4">
+                jbjb
+            </div>
+            <div class="control-btn col-4 play-btn">
+                <i class="bi-shuffle"></i>
+                <i class="bi-skip-start-btn "></i>
+                <i class="bi-play-circle "></i>
+                <i class="bi-skip-end-btn "></i>
+            </div>
+            <div class="adjust-btn col-4">
+                huh
+            </div>
+            
         </div>
     </body>
 </html>
