--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -28,58 +29,87 @@
         <link rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     </head>
+
     <body>
-            <div id="navigation-bar">
-                <div class="main-nav-row row">
-                    <ul class="main-nav">
-                        <li class="nav-item"><i class="nav-icon bi-house-fill"></i>
-                            <a
-                                href="" class="nav-link">Home</a></li>
-                        <li class="nav-item"><i class="nav-icon bi-search"></i>
-                            <a
-                                href="" class="nav-link">Search</a></li>
-                        <li class="nav-item"><i class="nav-icon bi-stack"> </i>
-                            <a
-                                href="" class="nav-link">Your Library</a></li>
-                    </ul>
+        <div id="navigation-bar">
+            <div class="main-nav-row">
+                <ul class="main-nav">
+                    <li class="nav-item"><i class="nav-icon bi-house-fill"></i>
+                        <a href="" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item"><i class="nav-icon bi-search"></i>
+                        <a href="" class="nav-link">Search</a>
+                    </li>
+                    <li class="nav-item"><i class="nav-icon bi-stack"> </i>
+                        <a href="" class="nav-link">Your Library</a>
+                    </li>
+                </ul>
 
-                    <ul class="sub-nav">
-                        <li class="nav-item"><i class="nav-icon
-                                bi-file-plus-fill"></i> <a href=""
-                                class="nav-link">Create Playlist</a></li>
-                        <li class="nav-item"><i class="nav-icon bi-heart-fill"></i>
-                            <a href="" class="nav-link">Linked Songs</a></li>
-                        <li class="nav-item nav-last-item"><i class="nav-icon
-                                bi-bookmark-plus-fill"></i> <a href=""
-                                class="nav-link">Your Episodes</a></li>
-                    </ul>
-                </div>
-                <div class="sub-nav-row row">
-                    <ul class="play-lists">
-                        <li class="nav-item"><a href="" class="nav-link">Fresh &
-                                Chill</a></li>
-                        <li class="nav-item"><a href="" class="nav-link">English</a></li>
-                    </ul>
-                </div>
+                <ul class="sub-nav">
+                    <li class="nav-item"><i class="nav-icon
+                            bi-file-plus-fill"></i> <a href="" class="nav-link">Create
+                            Playlist</a></li>
+                    <li class="nav-item"><i class="nav-icon bi-heart-fill"></i>
+                        <a href="" class="nav-link">Linked Songs</a>
+                    </li>
+                    <li class="nav-item nav-last-item"><i class="nav-icon
+                            bi-bookmark-plus-fill"></i> <a href=""
+                            class="nav-link">Your Episodes</a></li>
+                </ul>
             </div>
-            <div id="content-section">
-
+            <div class="sub-nav-row row">
+                <ul class="play-lists">
+                    <li class="nav-item"><a href="" class="nav-link">Fresh &
+                            Chill</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">English</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">Fresh &
+                            Chill</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">English</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">Fresh &
+                            Chill</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">English</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">Fresh &
+                            Chill</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">English</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">Fresh &
+                            Chill</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">English</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">Fresh &
+                            Chill</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">English</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">Fresh &
+                            Chill</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">English</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">Fresh &
+                            Chill</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">English</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">Fresh &
+                            Chill</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">English</a></li>
+                </ul>
             </div>
         </div>
+        <div id="content-section">
+        </div>
+
         <div id="play-bar" class="row">
             <div class="now-playing col-4">
                 jbjb
             </div>
-            <div class="control-btn col-4 play-btn">
-                <i class="bi-shuffle"></i>
-                <i class="bi-skip-start-btn "></i>
-                <i class="bi-play-circle "></i>
-                <i class="bi-skip-end-btn "></i>
+            <div class="control-btn col-4 text-center">
+                <div>
+                    <i class="bi-shuffle"></i>
+                    <i class="bi-skip-start-btn "></i>
+                    <i class="bi-play-circle "></i>
+                    <i class="bi-skip-end-btn "></i>
+                    <i class="bi-repeat"></i>
+                </div>
             </div>
             <div class="adjust-btn col-4">
                 huh
             </div>
-            
+
         </div>
     </body>
+
 </html>
