--- a/index.html
+++ b/index.html
@@ -1,115 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Spotify</title>
-        <link rel="stylesheet" href="./assets/css/style.css">
-        <link rel="stylesheet"
-            href="./assets/fonts/icons/themify-icons/themify-icons.css">
-        <link rel="stylesheet"
-            href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <script
-            src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-        <script
-            src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-            crossorigin="anonymous">
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-            crossorigin="anonymous"></script>
-        <link rel="stylesheet"
-            href="/assets/fonts/icons/boostrap-icons/font/bootstrap-icons.css">
-        <link rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Spotify</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/fonts/icons/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/assets/fonts/icons/boostrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+</head>
 
-    <body>
-        <div id="navigation-bar">
-            <div class="main-nav-row">
-                <ul class="main-nav">
-                    <li class="nav-item"><i class="nav-icon bi-house-fill"></i>
-                        <a href="" class="nav-link">Home</a>
-                    </li>
-                    <li class="nav-item"><i class="nav-icon bi-search"></i>
-                        <a href="" class="nav-link">Search</a>
-                    </li>
-                    <li class="nav-item"><i class="nav-icon bi-stack"> </i>
-                        <a href="" class="nav-link">Your Library</a>
-                    </li>
-                </ul>
+<body>
 
-                <ul class="sub-nav">
-                    <li class="nav-item"><i class="nav-icon
+    <div id="navigation-bar">
+        <div class="main-nav-row">
+            <ul class="main-nav">
+                <li class="nav-item"><i class="nav-icon bi-house-fill"></i>
+                    <a href="" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item"><i class="nav-icon bi-search"></i>
+                    <a href="" class="nav-link">Search</a>
+                </li>
+                <li class="nav-item"><i class="nav-icon bi-stack"> </i>
+                    <a href="" class="nav-link">Your Library</a>
+                </li>
+            </ul>
+
+            <ul class="sub-nav">
+                <li class="nav-item"><i class="nav-icon
                             bi-file-plus-fill"></i> <a href="" class="nav-link">Create
-                            Playlist</a></li>
-                    <li class="nav-item"><i class="nav-icon bi-heart-fill"></i>
-                        <a href="" class="nav-link">Linked Songs</a>
-                    </li>
-                    <li class="nav-item nav-last-item"><i class="nav-icon
-                            bi-bookmark-plus-fill"></i> <a href=""
-                            class="nav-link">Your Episodes</a></li>
-                </ul>
-            </div>
-            <div class="sub-nav-row row">
-                <ul class="play-lists">
-                    <li class="nav-item"><a href="" class="nav-link">Fresh &
-                            Chill</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">English</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">Fresh &
-                            Chill</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">English</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">Fresh &
-                            Chill</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">English</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">Fresh &
-                            Chill</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">English</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">Fresh &
-                            Chill</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">English</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">Fresh &
-                            Chill</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">English</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">Fresh &
-                            Chill</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">English</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">Fresh &
-                            Chill</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">English</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">Fresh &
-                            Chill</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">English</a></li>
-                </ul>
-            </div>
+                        Playlist</a></li>
+                <li class="nav-item"><i class="nav-icon bi-heart-fill"></i>
+                    <a href="" class="nav-link">Linked Songs</a>
+                </li>
+                <li class="nav-item nav-last-item"><i class="nav-icon
+                            bi-bookmark-plus-fill"></i> <a href="" class="nav-link">Your Episodes</a></li>
+            </ul>
         </div>
-        <div id="content-section">
+        <div class="sub-nav-row row">
+            <ul class="play-lists">
+                <li class="nav-item"><a href="" class="nav-link">Fresh &
+                        Chill</a></li>
+                <li class="nav-item"><a href="" class="nav-link">English</a></li>
+                <li class="nav-item"><a href="" class="nav-link">Fresh &
+                        Chill</a></li>
+                <li class="nav-item"><a href="" class="nav-link">English</a></li>
+                <li class="nav-item"><a href="" class="nav-link">Fresh &
+                        Chill</a></li>
+                <li class="nav-item"><a href="" class="nav-link">English</a></li>
+                <li class="nav-item"><a href="" class="nav-link">Fresh &
+                        Chill</a></li>
+                <li class="nav-item"><a href="" class="nav-link">English</a></li>
+                <li class="nav-item"><a href="" class="nav-link">Fresh &
+                        Chill</a></li>
+                <li class="nav-item"><a href="" class="nav-link">English</a></li>
+                <li class="nav-item"><a href="" class="nav-link">Fresh &
+                        Chill</a></li>
+                <li class="nav-item"><a href="" class="nav-link">English</a></li>
+                <li class="nav-item"><a href="" class="nav-link">Fresh &
+                        Chill</a></li>
+                <li class="nav-item"><a href="" class="nav-link">English</a></li>
+                <li class="nav-item"><a href="" class="nav-link">Fresh &
+                        Chill</a></li>
+                <li class="nav-item"><a href="" class="nav-link">English</a></li>
+                <li class="nav-item"><a href="" class="nav-link">Fresh &
+                        Chill</a></li>
+                <li class="nav-item"><a href="" class="nav-link">English</a></li>
+            </ul>
         </div>
+    </div>
+    <div id="content-section">
+    </div>
 
-        <div id="play-bar" class="row">
+    <div id="play-bar" class="row">
+        <div class="row first-row">
             <div class="now-playing col-4">
                 jbjb
             </div>
             <div class="control-btn col-4 text-center">
                 <div>
-                    <i class="bi-shuffle"></i>
-                    <i class="bi-skip-start-btn "></i>
-                    <i class="bi-play-circle "></i>
-                    <i class="bi-skip-end-btn "></i>
-                    <i class="bi-repeat"></i>
+                    <i class="button bi-shuffle js-shuffle-btn"></i>
+                    <i class="button bi-skip-start-btn js-to-prev-btn"></i>
+                    <i class="button bi-play-circle js-play-btn"></i>
+                    <i class="button bi-skip-end-btn js-to-next-btn"></i>
+                    <i class="button bi-repeat js-repeat-btn"></i>
                 </div>
             </div>
             <div class="adjust-btn col-4">
                 huh
             </div>
+        </div>
+        <div class="row second-row">
+            <audio src="./assets/musics/golden-hour.mp3" id="player" ontimeupdate="document.getElementById('tracktime').innerHTML = Math.floor(this.currentTime) + ' / ' + Math.floor(this.duration);"></audio>
+            <span id="tracktime">0 / 0</span>
+            <progress id="seekbar" value="0" max="0"></progress>
+
+
 
         </div>
-    </body>
+    </div>
+    <script>
+        // SEEKBAR
+const playBtn = document.querySelector('.js-play-btn');
+var nowPlaying = false;
+function removePlayIcon() {
+    playBtn.classList.remove('bi-play-circle');
+    playBtn.classList.add('bi-pause-circle');
+}
+function playMusic() {
+    document.getElementById('player').play();
+    removePlayIcon();
+}
+function removePauseIcon() {
+    playBtn.classList.remove('bi-pause-circle');
+    playBtn.classList.add('bi-play-circle');
+}
+function pauseMusic() {
+    document.getElementById('player').pause();
+    removePauseIcon();
+}
+playBtn.addEventListener('click', function () {
+    if (!nowPlaying) {
+        playMusic();
+        nowPlaying = true;
+    } else {
+        pauseMusic();
+        nowPlaying = false;
+    }
+});
+
+$('#player').on('timeupdate', function () {
+    $('#seekbar').attr("value", this.currentTime / this.duration);
+
+});
+
+// 
+    </script>
+</body>
 
 </html>
